--- a/templates/public/footer.html
+++ b/templates/public/footer.html
@@ -11,7 +11,7 @@ foreach($data as $data){}
                     <div class="col-lg-8">
                         <div class="footer-content text-center">
                             <a href="index.html">
-                                <img src="/upload/{{site.SiteLogo.url}}" alt="Logo">
+                                <img src="{{site.SiteLogo.url}}" alt="Logo">
                             </a>
                             
                            
