--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -67,7 +67,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="/">
-                                <img src="/upload/{{site.SiteLogo.url}}" alt="Logo" width="150px" height="50px" >
+                                <img src="{{site.SiteLogo.url}}" alt="Logo" width="150px" height="50px" >
                             </a> <!-- Logo -->
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col-lg-6 offset-xl-1">
                         <div class="myimg d-none d-lg-block" style="padding-top:40px">
-                            <img src="/upload/{{about.ProfileImage.url}}" alt="hero" height="800px">
+                            <img src="{{about.ProfileImage.url}}" alt="hero" height="800px">
                         </div> <!-- header image -->
                     </div>
                 </div> <!-- row -->
